added cluster dependency

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.2.3'
     testCompile 'com.typesafe.akka:akka-actor-testkit-typed_2.13:2.6.4'
     testCompile 'junit:junit:4.12'
+    compile group: 'com.typesafe.akka', name: 'akka-cluster-typed_2.13', version: '2.6.4'
     compile group: 'com.typesafe.akka', name: 'akka-serialization-jackson_2.13', version: '2.6.4'
 }
 
