Basic working server and app

--- a/conf/cluster.conf
+++ b/conf/cluster.conf
@@ -1,12 +1,15 @@
 akka {
   actor {
     provider = cluster
+    warn-about-java-serializer-usage = false
+
+
   }
   remote {
     enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 0
+      port = 9000
     }
   }
 
@@ -14,8 +17,7 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:9000",
-      "akka.tcp://ClusterSystem@127.0.0.1:9001"]
+      "akka.tcp://ServerSystem@127.0.0.1:9000"]
 
     roles = ["master"]
 
