--- a/src/main/resources/conf/cluster.conf
+++ b/src/main/resources/conf/cluster.conf
@@ -6,7 +6,7 @@ akka {
     enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 0
+      port = 54333
     }
   }
 
@@ -14,8 +14,8 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:9000",
-      "akka.tcp://ClusterSystem@127.0.0.1:9001"]
+      "akka.tcp://ServerClusterSystem@127.0.0.1:9000",
+      "akka.tcp://ServerClusterSystem@127.0.0.1:9001"]
 
     roles = ["master"]
 
