--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ buildNumber.properties
 .flattened-pom.xml
 
 # End of https://www.gitignore.io/api/java,maven,intellij
+/src/main/java/it/polimi/middleware/test/
+/src/main/java/it/polimi/middleware/test/
