--- a/src/main/resources/conf/store.conf
+++ b/src/main/resources/conf/store.conf
@@ -1,8 +1,8 @@
 store {
 
-    #how many copies of the same data there'll be. This number will be referred as R.
+    #how many replicas of the same data there'll be. This number will be referred as R.
     #The store will support up to R-1 failures
-    dataCopies = 3
+    dataReplicas = 3
     #how much to divide the hash space
     hashSpacePartition = 2
     node {
