--- a/src/main/resources/conf/server.conf
+++ b/src/main/resources/conf/server.conf
@@ -1,13 +1,14 @@
 akka {
-  actor {
-    provider = remote
-    warn-about-java-serializer-usage = false
-  }
-  remote {
-    enabled-transports = ["akka.remote.netty.tcp"]
-    netty.tcp {
-      hostname = "127.0.0.1"
-      port = 6123
+    loglevel = "OFF"
+    actor {
+        provider = remote
+        warn-about-java-serializer-usage = false
     }
-  }
+    remote {
+        enabled-transports = ["akka.remote.netty.tcp"]
+        netty.tcp {
+              hostname = "127.0.0.1"
+              port = 6123
+        }
+    }
 }
