greeting and system startup completed

--- a/src/main/resources/conf/store.conf
+++ b/src/main/resources/conf/store.conf
@@ -4,9 +4,16 @@ store {
     #The store will support up to R-1 failures
     dataReplicas = 3
     #how much to divide the hash space
-    hashSpacePartition = 2
+    hashSpacePartition = 16
+    #how many nodes will be access point to the system for each client
+    assignedNodesPerClient = 3
+
     node {
         #how many DataKeepers has each node working on a copy in its part of hash space.
         dataKeepersPerNode = 1
+    }
+
+    connection {
+        stdTimeout = 5
     }
 }
