--- a/src/main/resources/conf/server.conf
+++ b/src/main/resources/conf/server.conf
@@ -1,5 +1,5 @@
 akka {
-    loglevel = "OFF"
+    loglevel = "DEBUG"
     actor {
         provider = remote
         warn-about-java-serializer-usage = false
