added clustering support

--- a/src/main/resources/conf/cluster.conf
+++ b/src/main/resources/conf/cluster.conf
@@ -1,22 +1,35 @@
+akka.actor.allow-java-serialization = on
+akka.actor.warn-about-java-serializer-usage = off
+
 akka {
-    loglevel = "OFF"
+    #loglevel = "OFF"
   actor {
     provider = cluster
+
+
   }
+
   remote {
     enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 54333
+      port = 9000 #port to be set in app classes
     }
   }
+
+  remote.artery {
+        canonical {
+          hostname = "127.0.0.1"
+          port = 9000 #port to be set in app classes
+        }
+    }
 
   akka.cluster.jmx.multi-mbeans-in-same-jvm = on
 
   cluster {
     seed-nodes = [
-      "akka.tcp://ServerClusterSystem@127.0.0.1:9000",
-      "akka.tcp://ServerClusterSystem@127.0.0.1:9001"]
+      "akka.tcp://ServerClusterSystem@127.0.0.1:9000"]
+      #,"akka.tcp://ServerClusterSystem@127.0.0.1:9001"]
 
     roles = ["master"]
 
