added management of downing and upping and unreachable nodes

--- a/src/main/resources/conf/store.conf
+++ b/src/main/resources/conf/store.conf
@@ -4,9 +4,14 @@ store {
     #The store will support up to R-1 failures
     dataReplicas = 3
     #how much to divide the hash space
-    hashSpacePartition = 16
+    hashSpacePartition = 8
     #how many nodes will be access point to the system for each client
     assignedNodesPerClient = 2
+    #If this number of replicas are available (= reachable nodes), take action and warn the system that
+    #too few reachable replicas remain, thus down some node or add some new node
+    minReachableReplicasBeforeTakeAction = 1
+    #start automatically the store if enough nodes join it
+    autoStartStore = true
 
     node {
         #how many DataKeepers has each node working on a copy in its part of hash space.
