added data transfer support for nodes

--- a/src/main/resources/conf/store.conf
+++ b/src/main/resources/conf/store.conf
@@ -19,6 +19,10 @@ store {
     }
 
     connection {
+        #the standard timeout for node's requests
         stdTimeout = 5
+        #the max number of passages a message can have. Unless there are a lot of replicas, in general could be low.1
+        #Allows to avoid unseen cases in which a message would be forwarded indefinitely
+        stdMsgAliveSteps = 64
     }
 }
