added full client load management

--- a/src/main/resources/conf/store.conf
+++ b/src/main/resources/conf/store.conf
@@ -14,8 +14,10 @@ store {
     autoStartStore = true
 
     node {
-        #how many DataKeepers has each node working on a copy in its part of hash space.
-        dataKeepersPerNode = 1
+        #after how many clients a node receives it should notify the server that its load changed
+        #depending of the magnitude of the system
+        #Is set to 1 because in the example there will probably be not many clients
+        clientThresholdNotification = 1
     }
 
     connection {
