wip client consistency

--- a/src/main/resources/conf/store.conf
+++ b/src/main/resources/conf/store.conf
@@ -18,6 +18,10 @@ store {
         #depending of the magnitude of the system
         #Is set to 1 because in the example there will probably be not many clients
         clientThresholdNotification = 1
+
+        #size of old messages put in history. Can be used to retrieve older gets which arrive after newer writes
+        #from same client
+        historySize = 100
     }
 
     connection {
