now messages not found for a get are stashed until a new put occurs

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,7 @@ akka {
   loglevel = debug
   actor {
     provider = cluster
+    guardian-supervisor-strategy = "akka.actor.StoppingSupervisorStrategy"
 
     '''serialization-bindings {
       "CborSerializable" = jackson-cbor
